[package]
name = "ri-casper-js"
version = "0.1.0"
authors = ["Simon <simon@rech.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shlex = "1.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
path-absolutize = "3.0"
exec = "0.3.1"
